fix wrap css.js

--- a/css/wrap.css
+++ b/css/wrap.css
@@ -32,7 +32,6 @@
     text-indent:-9999px; 
     font-size:0; 
     line-height:0; 
-    opacity:0;
 }
 .sub_header .top{
     position:absolute; 
@@ -43,7 +42,6 @@
     font-family:"sw_f"; 
     color:#bbbbbb; 
     font-size:13px; 
-    opacity:0;
 }
 .sub_header .top:after{
     content:''; 
